fixing scroll on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,8 +29,6 @@ body {
   -webkit-text-size-adjust: 100%;
   color: var(--foreground);
   background-color: var(--background) !important;
-  padding-top: env(safe-area-inset-top);
-  padding-bottom: env(safe-area-inset-bottom);
   @apply antialiased w-full m-0 p-0;
 }
 
