--- a/src/components/chat/ChatBody.module.css
+++ b/src/components/chat/ChatBody.module.css
@@ -1,18 +1,20 @@
 .section {
-  @apply flex flex-1 flex-col w-full transition-all duration-500 z-10 overflow-hidden;
+  @apply flex flex-1 flex-col w-full transition-all duration-500 z-10 relative
+ /* pt-[env(safe-area-inset-top)] pb-[env(safe-area-inset-bottom)] */
+  
+ max-h-[calc(100vh-146px)] overflow-y-auto
+
+ [&::-webkit-scrollbar]:w-[2px] 
+ [&::-webkit-scrollbar-track]:rounded-full
+ [&::-webkit-scrollbar-track]:bg-jwdAqua-100/20
+ [&::-webkit-scrollbar-thumb]:rounded-full
+ [&::-webkit-scrollbar-thumb]:bg-jwdAqua-500
+ dark:[&::-webkit-scrollbar-track]:bg-jwdAqua-100/20
+ dark:[&::-webkit-scrollbar-thumb]:bg-jwdAqua-500;
 }
 
 .wrapper {
-  @apply flex flex-col space-y-4 w-full max-w-4xl mx-auto 
-  h-full max-h-[calc(100vh-137px)] px-6 xl:px-0 
-  pt-[env(safe-area-inset-top)] pb-[env(safe-area-inset-bottom)]
-  [&::-webkit-scrollbar]:w-[2px] overflow-y-auto
-  [&::-webkit-scrollbar-track]:rounded-full
-  [&::-webkit-scrollbar-track]:bg-jwdAqua-100/20
-  [&::-webkit-scrollbar-thumb]:rounded-full
-  [&::-webkit-scrollbar-thumb]:bg-jwdAqua-500
-  dark:[&::-webkit-scrollbar-track]:bg-jwdAqua-100/20
-  dark:[&::-webkit-scrollbar-thumb]:bg-jwdAqua-500;
+  @apply flex flex-col flex-1 space-y-4 w-full max-w-4xl mx-auto p-6 lg:px-0;
 }
 
 .article {
@@ -41,7 +43,7 @@
 }
 
 .bottomRef {
-  @apply flex w-full text-[5px];
+  @apply flex w-full h-2;
 }
 
 .content h1,
