--- a/src/components/chat/ChatIntro.module.css
+++ b/src/components/chat/ChatIntro.module.css
@@ -1,5 +1,6 @@
 .wrapper {
-  @apply flex flex-col justify-center w-full h-full items-center space-y-4 pt-[env(safe-area-inset-top)] pb-[env(safe-area-inset-bottom)];
+  @apply flex flex-col flex-1 justify-center w-full items-center space-y-4 
+  pt-[env(safe-area-inset-top)] pb-[env(safe-area-inset-bottom)];
 }
 
 .title,
