--- a/src/components/layout/PageWrapper.module.css
+++ b/src/components/layout/PageWrapper.module.css
@@ -1,5 +1,6 @@
 .main {
-  @apply flex flex-col w-full h-screen relative bg-jwdMarine-900/30 z-0;
+  @apply flex flex-col w-full min-h-screen relative bg-jwdMarine-900/30 z-0
+  pt-[env(safe-area-inset-top)] pb-[env(safe-area-inset-bottom)];
 }
 
 .chatBackground {
