--- a/src/components/sections/LandingPage.module.css
+++ b/src/components/sections/LandingPage.module.css
@@ -1,5 +1,5 @@
 .section {
-  @apply flex flex-col w-full min-h-screen items-center justify-center space-y-12 px-4 z-10 overflow-hidden;
+  @apply flex flex-col w-full h-full items-center justify-center space-y-12 px-4 z-10 overflow-hidden;
 }
 
 .head,
